--- a/index.html
+++ b/index.html
@@ -405,83 +405,9 @@
                       </div>
                       
                         <div class="hidden-container d-flex justify-content-center">
-                          <ul class="addon-nav comm-nav dropdown-menu">
-                            <li class="back-otp">
-                              <div class="d-inilin-flex align-items-center justify-content-center">
-                                <i class="bx bx-chevron-left"></i>
-                                <span class="back-otp">back</span>
-                              </div>
-                            </li>
-                            <li class="main-opt">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="apt-opt">
-                                  <label class="form-check-label" for="flexCheckIndeterminate">
-                                        Apartment/Floor
-                                  </label>
-                              </div>
-                            </li>
-                            <li class="main-opt">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="house-opt">
-                                  <label class="form-check-label" for="flexCheckIndeterminate">
-                                      House
-                                  </label>
-                              </div>
-                            </li>
-                            
-                            <li class="main-opt">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="home-opt">
-                                  <label class="form-check-label" for="flexCheckIndeterminate">
-                                     Home
-                                  </label>
-                              </div>
-                            </li>
-                            <li class="main-opt">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="classic-opt">
-                                  <label class="form-check-label" for="flexCheckIndeterminate">
-                                    Classic Luxury
-                                  </label>
-                              </div>
-                            </li>
-                            <li class="main-opt">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="lux-opt">
-                                  <label class="form-check-label" for="flexCheckIndeterminate">
-                                    Advanced Luxury
-                                  </label>
-                              </div>
-                            </li>
-                            <li>
-                            <li class="main-opt">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="plot-opt">
-                                  <label class="form-check-label" for="flexCheckIndeterminate">
-                                    Plot
-                                  </label>
-                              </div>
-                            </li>
-                            <li class="main-opt">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="island-opt">
-                                  <label class="form-check-label" for="flexCheckIndeterminate">
-                                    Island
-                                  </label>
-                              </div>
-                            </li>
-                            <li class="main-opt">
-                              <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="shared-opt">
-                                  <label class="form-check-label" for="flexCheckIndeterminate">
-                                    Shared
-                                  </label>
-                              </div>
-                            </li>
+                          <ul class="addon-nav dropdown-menu">
                           </ul>
                         </div>
-
-
 
                       </div>
 
