--- a/property-right-sidebar.html
+++ b/property-right-sidebar.html
@@ -380,32 +380,32 @@
                       "
                     >
                       <i class="fas fa-phone-square-alt share-options-item"></i>
-                      <i class="fas fa-phone-square-alt share-options-item"></i>
-                      <i class="fas fa-phone-square-alt share-options-item"></i>
+                      <i class="fab fa-whatsapp-square share-options-item"></i>
+                      <i class="fas fa-envelope-square share-options-item"></i>
                     </div>
                   </div>
-                  <div class="bottom">
-                    <span>From $12,000.00</span>
-                    <h3>
-                      <a href="property-details.html">Sag Harbor Cottage</a>
-                    </h3>
-                    <a class="location" href="#">
-                      <i class="bx bx-current-location"></i>
-                      300 B 1st View Road, New York
-                    </a>
-                    <ul>
-                      <li>5 BD</li>
-                      <li>2 BA</li>
-                      <li>1800 SF</li>
-                      <li>6 RM</li>
-                    </ul>
-                    <button
-                      class="btn btn-primary mt-2"
-                      id="whislist-btn"
-                      onclick="addToWhislist(event)"
-                    >
-                      Whislist
-                    </button>
+                  <div class="bottom d-flex justify-content-between">
+                    <div class="left-bottom">
+                      <span>From $12,000.00</span>
+                      <h3>
+                        <a href="property-details.html">Sag Harbor Cottage</a>
+                      </h3>
+                      <a class="location" href="#">
+                        <i class="bx bx-current-location"></i>
+                        300 B 1st View Road, New York
+                      </a>
+                      <ul>
+                        <li>5 BD</li>
+                        <li>2 BA</li>
+                        <li>1800 SF</li>
+                        <li>6 RM</li>
+                      </ul>
+                    </div>
+                    <div class="right-bottom">
+                      <span>
+                        <i class="far fa-heart" style="font-size: 1.4rem"></i>
+                      </span>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -420,21 +420,28 @@
                       alt="Property"
                     />
                   </div>
-                  <div class="bottom">
-                    <span>$11,000.00/Month</span>
-                    <h3>
-                      <a href="property-details.html">Cascade Blocks Villa</a>
-                    </h3>
-                    <a class="location" href="#">
-                      <i class="bx bx-current-location"></i>
-                      300 B 1st View Road, New York
-                    </a>
-                    <ul>
-                      <li>5 BD</li>
-                      <li>2 BA</li>
-                      <li>1800 SF</li>
-                      <li>6 RM</li>
-                    </ul>
+                  <div class="bottom d-flex justify-content-between">
+                    <div class="left-bottom">
+                      <span>$11,000.00/Month</span>
+                      <h3>
+                        <a href="property-details.html">Cascade Blocks Villa</a>
+                      </h3>
+                      <a class="location" href="#">
+                        <i class="bx bx-current-location"></i>
+                        300 B 1st View Road, New York
+                      </a>
+                      <ul>
+                        <li>5 BD</li>
+                        <li>2 BA</li>
+                        <li>1800 SF</li>
+                        <li>6 RM</li>
+                      </ul>
+                    </div>
+                    <div class="right-bottom">
+                      <span>
+                        <i class="far fa-heart"></i>
+                      </span>
+                    </div>
                   </div>
                 </div>
               </div>
