--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 
     <!-- Banner -->
   <div class="banner-area">
+    <!-- <img src="./assets/images/banner/banner1.jpg" alt=""> -->
     <div class="container">
       <div class="banner-content mt-6">
           <h1 class="banner-content-heading">Find Your Dream Property</h1>
@@ -350,7 +351,7 @@
                             </li>
                             <div class="filter-list"></div>
                             <div class="main-list">
-                            <li class="item">
+                            <li class="item Residential-item">
                               <div class="form-check">
                                 <input class="form-check-input property-type" type="checkbox" value="Residential" id="Residential">
                                 <label class="form-check-label" for="flexCheckIndeterminate">
@@ -359,7 +360,8 @@
                                     </span>
                                 </label>
                               </div>
-                              <ul class="sub-dropdown" id="Residential-dropdown">
+                            </li>
+                            <div id="Residential-dropdown">
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input residential" type="checkbox" value="Apartment/Floor" id="Apartment-Floor">
@@ -369,7 +371,8 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="Apartment-Floor-sub-dropdown">
+                                </li>
+                                <div class="Apartment-Floor-sub-dropdown">
                                     <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input apartment-floor" type="checkbox" value="Builder floor">
@@ -460,8 +463,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
+                                </div>
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input residential" type="checkbox" value="Home" id="home">
@@ -471,8 +473,9 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="home-sub-dropdown">
-                                    <li class="item">
+                                </li>
+                                <div class="home-sub-dropdown">
+                                  <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input home" type="checkbox" value="Cabin">
                                         <label class="form-check-label" for="flexCheckIndeterminate">
@@ -612,8 +615,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
+                                </div>
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input residential" type="checkbox" value="Classic_Luxury" id="classic-luxury">
@@ -623,8 +625,9 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="classic-luxury-sub-dropdown">
-                                    <li class="item">
+                                </li>
+                                <div class="classic-luxury-sub-dropdown">
+                                  <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input classic_luxury" type="checkbox" value="Castle">
                                         <label class="form-check-label" for="flexCheckIndeterminate">
@@ -694,8 +697,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
+                                </div>
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input residential" type="checkbox" value="Advanced_Luxury" id="Advanced-Luxury">
@@ -705,8 +707,9 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="Advanced-Luxurysub-dropdown">
-                                    <li class="item">
+                                </li>
+                                <div class="Advanced-Luxurysub-dropdown">
+                                  <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input advanced_luxury" type="checkbox" value="Barndominium">
                                         <label class="form-check-label" for="flexCheckIndeterminate">
@@ -756,9 +759,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                    
-                                  </ul>
-                                </li>
+                                </div>
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input residential" type="checkbox" value="plot" id="plot">
@@ -768,7 +769,8 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="plot-sub-dropdown">
+                                </li>
+                                 <div class="plot-sub-dropdown">
                                     <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input plot" type="checkbox" value="Government_sector_plot">
@@ -799,8 +801,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
+                                  </div>
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input residential" type="checkbox" value="Island" id="island">
@@ -810,7 +811,8 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="island-sub-dropdown">
+                                </li>
+                                <div class="island-sub-dropdown">
                                     <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input island" type="checkbox" value="Artificial_island">
@@ -871,8 +873,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
+                                  </div>
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input residential" type="checkbox" value="Shared" id="shared">
@@ -882,7 +883,8 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="shared-sub-dropdown">
+                                </li>
+                                <div class="shared-sub-dropdown">
                                     <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input shared" type="checkbox" value="Condominium" >
@@ -903,10 +905,8 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
-                              </ul>
-                            </li>
+                                </div>
+                            </div>
                             <li class="item">
                               <div class="form-check">
                                 <input class="form-check-input property-type" type="checkbox" value="Commercial" id="Commercial">
@@ -916,7 +916,8 @@
                                   </span>
                                 </label>
                               </div>
-                               <ul class="sub-dropdown" id="Commercial-dropdown">
+                            </li>
+                            <div class="sub-dropdown" id="Commercial-dropdown">
                                  <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input commercial" type="checkbox" value="Office"id="office">
@@ -926,7 +927,8 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="Office-sub-dropdown">
+                                </li>
+                                <div class="Office-sub-dropdown">
                                     <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input office" type="checkbox" value="Bare_shell_office_space">
@@ -957,8 +959,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
+                                  </div>
                                  <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input commercial" type="checkbox" value="retail" id="retail">
@@ -968,7 +969,8 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="retail-sub-dropdown">
+                                </li>
+                                <div class="retail-sub-dropdown">
                                     <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input retail" type="checkbox" value="Anchor_store">
@@ -1149,8 +1151,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
+                                  </div>
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input commercial" type="checkbox" value="Hospitality" id="hospitality">
@@ -1160,7 +1161,8 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="hospitality-sub-dropdown">
+                                </li>
+                                 <div class="hospitality-sub-dropdown">
                                     <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input hospitality" type="checkbox" value="Banquet_hall" >
@@ -1271,8 +1273,7 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
+                                  </div>
                                 <li class="item">
                                   <div class="form-check">
                                     <input class="form-check-input commercial" type="checkbox" value="Others" id="others">
@@ -1282,7 +1283,8 @@
                                       </span>
                                     </label>
                                   </div>
-                                  <ul class="others-sub-dropdown">
+                                </li>
+                                  <div class="others-sub-dropdown">
                                     <li class="item">
                                       <div class="form-check">
                                         <input class="form-check-input others" type="checkbox" value="Mixed-use">
@@ -1303,10 +1305,8 @@
                                         </label>
                                       </div>
                                     </li>
-                                  </ul>
-                                </li>
-                              </ul>
-                            </li>
+                                  </div>
+                              </div>
                             <li class="item">
                               <div class="form-check">
                                 <input class="form-check-input property-type" type="checkbox" value="Industrial" id="Industrial">
@@ -1392,7 +1392,7 @@
 
           <div class="advanced-option-list">  
             <div class="row">
-              <div class="col-lg-5">
+              <div class="col-lg-5 mt-4">
                 <div class="area-slider mt-3">
                   <div class="area-range">
                     <div>
@@ -1426,7 +1426,7 @@
                 </div>
               </div>
               <!-- //area-dropdown -->
-              <div class="col-lg-5">
+              <div class="col-lg-5 mt-4">
                 <div class="price-slider mb-4 mt-3">
                 <div class="price-range">
                   <div>
