Initial Template setup

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="./assests/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assests/css/Admin.css" />
+    <link rel="stylesheet" href="./assests/css/animate.min.css" />
+    <link rel="stylesheet" href="./assests/css/boxicons.min.css" />
+    <link rel="stylesheet" href="./assests/css/style.css" />
+    <link rel="stylesheet" href="./assests/css/responsive.css" />
+    <title>Admin Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +45,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="./assests/js/jquery.min.js"></script>
+    <script src="./assests/js/popper.min.js"></script>
+    <script src="./assests/js/bootstrap.min.js"></script>
+    <script src="./assests/js/Site.js"></script>
+    <script src="./assests/js/custom.js"></script>
   </body>
 </html>
